After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688211 - Mobile broadband section doesn't update IMEI and Operator Name properly
Mobile broadband section doesn't update IMEI and Operator Name properly
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Network
3.6.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-12 22:31 UTC by Aleksander Morgado
Modified: 2012-11-23 16:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch for the issue (14.85 KB, patch)
2012-11-12 22:34 UTC, Aleksander Morgado
none Details | Review

Description Aleksander Morgado 2012-11-12 22:31:36 UTC
Both IMEI and Operator Name don't get properly updated in the Mobile Broadband section:
 * IMEI gets loaded, but the UI doesn't refresh at that time.
 * Operator Name also gets loaded, and also the UI doesn't refresh at that time.
 * Operator Name changes along with the registration status of the modem, and that is not implemented.
Comment 1 Aleksander Morgado 2012-11-12 22:34:10 UTC
Created attachment 228836 [details] [review]
Patch for the issue

The attached patch solves the three issues listed before. It applies cleanly both in git master and 3.6.x.
Comment 2 Aleksander Morgado 2012-11-23 16:40:46 UTC
Pushed to git master after hughsie's review.

This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.